--- a/assets/auth.sass
+++ b/assets/auth.sass
@@ -1,8 +1,7 @@
 .container
-  width: 350px
+  width: 320px
   background-color: $grey-1
   box-shadow: 0 0 50px #555
-  border: 1px solid #999
   display: flex
   align-items: center
   flex-direction: column
@@ -18,19 +17,17 @@ input
   height: 30px
   width: 220px
   border-radius: 10px
-  border: solid $main-background
+  border: 1px solid $main-background
   padding: 8px
 
   &:focus
-
-    box-shadow: 0 0 5px rgba(81, 203, 238, 1)
-    border: 1px solid rgba(81, 203, 238, 1)
+    box-shadow: 0 0 5px #888
+    border: 1px solid #DDD
     -webkit-transition: all 0.30s ease-in-out
     -moz-transition: all 0.30s ease-in-out
     -ms-transition: all 0.30s ease-in-out
     -o-transition: all 0.30s ease-in-out
     outline: none
-    border: 1px solid #DDDDDD
 
 .btn
   width: 150px
