adding auction working 100 % bitch

--- a/assets/admin.sass
+++ b/assets/admin.sass
@@ -17,9 +17,9 @@
     border-radius: 10px
     color: #FFF
     cursor: pointer
-    transition: 100ms all
     background: #555
     text-align: center
+    user-select: none
 
   .list
     margin-top: 40px
